<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">我的快递</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="main_title">主界面</string>
    <string name="txt_kd">请选择快递！</string>
    <string name="btn_kd">选择快递</string>
    <string name="edit_num">请输入单号！</string>
	<string name="btn_select">查询</string>
	<string name="btn_save">保存</string>
	<string name="courses_title">订单详情：</string>

</resources>
