<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_height"
        android:background="@drawable/btn_contacts_youni_normal"
        android:gravity="center_vertical" >

        <Button
            android:id="@+id/btn_return"
            android:layout_width="@dimen/btn_hw"
            android:layout_height="@dimen/btn_hw"
            android:layout_marginLeft="4dp"
            android:background="@drawable/chat_prev_page_nor" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/text_color"
            android:textSize="@dimen/my_textSize_one" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btn_add"
            android:layout_width="@dimen/btn_hw"
            android:layout_height="@dimen/btn_hw"
            android:layout_marginRight="4dp"
            android:visibility="invisible" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical" >
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txt_kd"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/header_height"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/txt_kd"
            android:textSize="@dimen/my_textSize_two"
            android:background="@drawable/search_box" />

        <Button
            android:id="@+id/btn_kd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="2dp"
            android:background="@drawable/btn_contacts_youni_normal"
            android:height="@dimen/header_height"
            android:padding="4dp"
            android:text="@string/btn_kd"
            android:textColor="@color/text_color"
            android:textSize="@dimen/my_textSize_two" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="5dp" >        
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/edit_num"
            android:layout_width="match_parent"
            android:layout_height="@dimen/header_height"
            android:gravity="center"
            android:hint="@string/edit_num"
            android:textSize="@dimen/my_textSize_two"
            android:background="@drawable/search_box" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="5dp" >        
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <Button
            android:id="@+id/btn_select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_contacts_youni_normal"
            android:height="@dimen/header_height"
            android:padding="4dp"
            android:text="@string/btn_select"
            android:textColor="@color/text_color"
            android:textSize="@dimen/my_textSize_two" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical" >
    </LinearLayout>

</LinearLayout>